--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About Me</a>
@@ -52,7 +52,7 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            <img src="images/yoga.png" alt="yoga app" class="img-fluid rounded d-start" />
+            <img src="/images/yoga.png" alt="yoga app" class="img-fluid rounded d-start" />
         </div>
         <div class="col-md-6 d-end">
 
@@ -64,7 +64,7 @@
 
             <div class="row m-1">
 
-                <a href="#" class="contact-link  w-50 rounded p-3">Launch Yoga App</a>
+                <a href="#" class="contact-link  w-50 rounded p-3 m-1 text-decoration-none">Launch Yoga App</a>
             </div>
         </div>
         <div class="row">
@@ -80,11 +80,11 @@
 
                 <div class="row m-1">
 
-                    <a href="#" class="contact-link  w-50 rounded p-3">Launch Weather App</a>
+                    <a href="#" class="contact-link  w-50 rounded p-3 m-1 text-decoration-none">Launch Weather App</a>
                 </div>
             </div>
             <div class="col-md-6 d-end">
-                <img src="images/weather.png" alt="weather app" class="img-fluid rounded d-end" />
+                <img src="/images/weather.png" alt="weather app" class="img-fluid rounded d-end" />
             </div>
 
         </div>
@@ -95,7 +95,7 @@
 
         <div class="row">
             <div class="col-md-6">
-                <img src="images/yogurt.png" alt="yogurt app" class="img-fluid rounded d-start" />
+                <img src="/images/yogurt.png" alt="yogurt app" class="img-fluid rounded d-start" />
             </div>
             <div class="col-md-6 d-end">
 
@@ -107,7 +107,7 @@
 
                 <div class="row m-1">
 
-                    <a href="#" class="contact-link  w-50 rounded p-3">Launch Yogurt App</a>
+                    <a href="#" class="contact-link  w-50 rounded p-3 m-1 text-decoration-none">Launch Yogurt App</a>
                 </div>
 </body>
 
